--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,8 +29,9 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:background="@drawable/vmeet_tansparent_350"
+                    android:background="@drawable/ic_meeting"
                     android:layout_width="115dp"
+                    android:paddingBottom="12dp"
                     android:layout_height="115dp" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -124,7 +125,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginLeft="25dp"
                     android:layout_marginRight="25dp"
-                    android:layout_width="180dp"
+                    android:layout_width="match_parent"
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"
                     android:text="@string/register"
@@ -133,7 +134,7 @@
                     android:textSize="14sp"
                     app:rippleColor="@color/colorPrimaryRipple"
                     app:backgroundTint="@color/colorPrimary"
-                    app:cornerRadius="20dp" />
+                    app:cornerRadius="10dp" />
 
                 <TextView
                     android:paddingTop="15dp"
@@ -141,12 +142,12 @@
                     android:textSize="13sp"
                     android:gravity="center"
                     android:textColor="@color/secondaryText"
-                    android:text="OR continue with"
+                    android:text="@string/or_continue_with"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.gms.common.SignInButton
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnGoogleSignIn"
                     android:layout_marginLeft="20dp"
@@ -179,7 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:textAppearance="@style/FontPath.SemiBold"
                 android:text="@string/login"
                 android:textAllCaps="true"
