--- a/app/src/main/res/layout/activity_schedule_meeting.xml
+++ b/app/src/main/res/layout/activity_schedule_meeting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/appBg"
-    tools:context="network.oversee.buttin.schedule.ScheduleMeetingActivity">
+    tools:context=".hizkiyyah.schedule.ScheduleMeetingActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
