--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -217,15 +217,14 @@
 
                         </LinearLayout>
 
-                        <com.google.android.gms.ads.AdView
-                            xmlns:ads="http://schemas.android.com/apk/res-auto"
+                        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/adView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginTop="20dp"
                             ads:adSize="BANNER"
-                            ads:adUnitId="@string/vmeet_banner"/>
+                            ads:adUnitId="@string/meet_banner" />
 
                         <TextView
                             android:layout_width="match_parent"
