--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">#1B6EF6</color>
-    <color name="colorPrimaryDark">#1B6EF6</color>
+    <color name="colorPrimary">#1B90F6</color>
+    <color name="colorPrimaryDark">#1B7EF6</color>
     <color name="colorPrimaryTrans">#201B6EF6</color>
-    <color name="colorAccent">#1B6EF6</color>
-
+    <color name="colorAccent">#1B97F6</color>
     <color name="colorPrimaryRipple">#421B6EF6</color>
     <color name="colorAccentRipple">#421B6EF6</color>
-
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#616161</color>
-
     <color name="new_meeting">#FF9800</color>  <!--ff5722-->
     <color name="white">#ffffff</color>
     <color name="delete">#f75254</color>
