--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -94,6 +94,7 @@
                             android:layout_height="wrap_content">
 
                             <LinearLayout
+                                android:visibility="gone"
                                 android:gravity="center"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
@@ -135,7 +136,7 @@
 
                             <LinearLayout
                                 android:gravity="center"
-                                android:layout_width="0dp"
+                                android:layout_width="match_parent"
                                 android:layout_marginRight="5dp"
                                 android:layout_marginLeft="5dp"
                                 android:layout_height="wrap_content"
@@ -149,9 +150,24 @@
                                     android:gravity="center"
                                     android:layout_height="wrap_content">
 
+                                    <com.google.android.material.button.MaterialButton
+                                        android:layout_width="270dp"
+                                        android:layout_height="60dp"
+                                        android:insetTop="0dp"
+                                        android:insetLeft="0dp"
+                                        android:insetRight="0dp"
+                                        android:visibility="gone"
+                                        android:background="@drawable/bg_primary_5dp"
+                                        android:insetBottom="0dp"
+                                        app:elevation="8dp"
+                                        android:text="Join meeting"
+                                        app:icon="@drawable/ic_join"
+                                        app:iconGravity="textStart"
+                                        app:iconPadding="24dp" />
+
                                     <RelativeLayout
                                         android:background="@drawable/bg_primary_5dp"
-                                        android:layout_width="60dp"
+                                        android:layout_width="220dp"
                                         android:layout_height="60dp">
 
                                         <ImageView
@@ -161,9 +177,13 @@
                                             android:layout_width="30dp"
                                             android:layout_height="30dp"/>
 
+
+
+
                                     </RelativeLayout>
 
                                     <TextView
+                                        android:visibility="visible"
                                         android:textSize="14sp"
                                         android:textColor="@color/primaryText"
                                         android:text="@string/join"
@@ -180,9 +200,11 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+                                android:visibility="gone"
                                 android:orientation="vertical">
 
                                 <LinearLayout
+                                    android:visibility="gone"
                                     android:id="@+id/llSchedule"
                                     android:layout_width="wrap_content"
                                     android:orientation="vertical"
