--- a/app/src/main/res/layout/fragment_meeting_history.xml
+++ b/app/src/main/res/layout/fragment_meeting_history.xml
@@ -93,11 +93,22 @@
                         android:layout_marginTop="10dp"
                         android:textColor="@color/secondaryText" />
 
+                    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/adView"
+                        android:layout_marginTop="40dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        ads:adSize="MEDIUM_RECTANGLE"
+                        ads:adUnitId="@string/meet_banner" />
                 </LinearLayout>
+
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvHistory"
                     android:paddingBottom="50dp"
+                    android:layout_marginTop="50dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
