--- a/app/src/main/res/layout/itemview_intro.xml
+++ b/app/src/main/res/layout/itemview_intro.xml
@@ -7,22 +7,36 @@
     android:layout_gravity="center"
     android:gravity="center">
 
-    <TextView
-        android:id="@+id/txtTitle"
-        android:textColor="@color/primaryText"
-        android:textSize="20sp"
-        android:layout_marginBottom="75dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="@string/app_name"
-        android:textAppearance="@style/FontPath.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
 
     <ImageView
         android:id="@+id/imgPreview"
         android:layout_width="180dp"
         android:adjustViewBounds="true"
+        android:layout_marginBottom="75dp"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="@string/app_name"
+        android:textAppearance="@style/FontPath.Medium"
+        android:textColor="@color/primaryText"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/txtdes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="Where Most Meetings Simplified."
+        android:layout_marginTop="14dp"
+        android:textAppearance="@style/FontPath.Light"
+        android:textColor="@color/nav_selector"
+        android:textSize="14sp" />
 
 </LinearLayout>
