--- a/app/src/main/res/menu/menu_navigation_drawer.xml
+++ b/app/src/main/res/menu/menu_navigation_drawer.xml
@@ -13,6 +13,7 @@
         <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_calendar"
+            android:visible="false"
             android:title="@string/schedule" />
         <item
             android:id="@+id/nav_settings"
