--- a/app/src/main/res/layout/fragment_meeting_history.xml
+++ b/app/src/main/res/layout/fragment_meeting_history.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:paddingTop="42dp"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
 
@@ -108,7 +109,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvHistory"
                     android:paddingBottom="50dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="14dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
