--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true"
     android:focusable="true"
+    android:paddingTop="42dp"
     android:background="@color/colorPrimary"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
@@ -54,6 +55,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="0dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -68,6 +70,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/transparent"
                 android:orientation="vertical">
 
                 <com.google.android.material.card.MaterialCardView
@@ -76,6 +79,8 @@
                     app:cardBackgroundColor="@color/white"
                     app:cardElevation="0dp"
                     android:elevation="0dp"
+                    android:padding="0dp"
+                    android:layout_margin="0dp"
                     app:cardPreventCornerOverlap="true"
                     app:cardUseCompatPadding="true"
                     app:shapeAppearance="@style/ShapeAppearance.MyApp.MediumComponent">
