--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="error">#e57373</color>
     <color name="divider">#e6e6e6</color>
     <color name="appBg">#fafafa</color>
-    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/divider</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/divider
+    </color>
+
+    <color name="black_overlay">#66000000</color>
 
 </resources>
