--- a/app/src/main/res/layout/dialog_meeting_code.xml
+++ b/app/src/main/res/layout/dialog_meeting_code.xml
@@ -61,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name"
+            android:enabled="true"
             app:boxStrokeColor="@color/divider"
             app:boxStrokeWidth="1dp"
             android:layout_marginTop="10dp"
