refactor!: minor ui changes

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -9,7 +9,7 @@
       android:translateY="21">
     <path
         android:pathData="m12,23.25c-6.204,0 -11.25,-5.047 -11.25,-11.25s5.046,-11.25 11.25,-11.25 11.25,5.047 11.25,11.25 -5.046,11.25 -11.25,11.25z"
-        android:fillColor="#2196f3"/>
+        android:fillColor="#1B90F6"/>
     <path
         android:pathData="m19.25,9.15v5.7c0,0.39 -0.43,0.63 -0.77,0.42l-3.23,-2.02v1.5c0,0.83 -0.67,1.5 -1.5,1.5h-7.5c-0.83,0 -1.5,-0.67 -1.5,-1.5v-5.5c0,-0.83 0.67,-1.5 1.5,-1.5h7.5c0.83,0 1.5,0.67 1.5,1.5v1.5l3.23,-2.02c0.34,-0.21 0.77,0.03 0.77,0.42z"
         android:fillColor="#fafafa"/>
