--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,36 +101,24 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnLogin"
-                android:layout_width="180dp"
+                android:layout_width="match_parent"
                 android:layout_gravity="center"
-                android:layout_height="wrap_content"
+                android:layout_height="59dp"
                 android:text="@string/login"
                 android:layout_marginTop="15dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
                 android:textColor="@color/white"
                 android:textAllCaps="true"
                 android:textSize="14sp"
                 app:rippleColor="@color/colorPrimaryRipple"
                 app:backgroundTint="@color/colorPrimary"
-                app:cornerRadius="20dp" />
+                app:cornerRadius="4dp" />
 
-            <TextView
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
-                android:textSize="13sp"
-                android:gravity="center"
-                android:textColor="@color/secondaryText"
-                android:text="OR continue with"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
 
             <com.google.android.gms.common.SignInButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnGoogleSignIn"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="20dp"/>
 
         </LinearLayout>
