--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:background="@drawable/ic_meeting"
+                android:background="@mipmap/ic_launcher"
                 android:layout_width="115dp"
                 android:layout_height="115dp"/>
 
