--- a/app/src/main/res/color/nav_text_selector.xml
+++ b/app/src/main/res/color/nav_text_selector.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorPrimary" android:state_checked="true" />
-    <item android:color="@color/secondaryText" />
+    <item android:color="@color/appBg" android:state_checked="true" />
+    <item android:color="#E2E2E2" />
 </selector>
