--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,11 +16,11 @@
 
         <ImageView
             android:id="@+id/img"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/ic_meeting"
+            android:background="@mipmap/ic_launcher"
             android:fitsSystemWindows="true"
             android:scaleType="fitXY" />
 
@@ -40,7 +40,7 @@
             android:layout_marginTop="4dp"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:text="Cloud Meetings Made Easy"
+            android:text="Cloud Meetings Redefined"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@color/white"
             android:textSize="16sp" />
